# parallel_k-means

./: .gitignore  CMakeLists.txt  README.md  dataManipulator.cpp  kmeans.cpp  main.cpp
include/: dataManipulator.h  ioUtils.h  kmeans.h  kmeansCuda.h  plotUtils.h  point.h
src/: benchmark.cpp  dataManipulator.cpp  ioUtils.cpp  kmeans.cpp  kmeansCuda.cu  main.cpp  plotUtils.cpp  point.cpp
